# Alpha1000

./: .gitignore  README.md  package-lock.json  pyproject.toml
bots/: __init__.py  base.py  baseline_counter.py  baseline_greedy.py  baseline_trump_manager.py  bot_arena.py  random_bot.py  self_play.py
engine/: __init__.py  bidding.py  cards.py  deck.py  encode.py  game.py  mechanics.py  musik.py  rules_schema.py  rules_tysiac.yaml  scoring.py  service.py  state.py  trick.py
rl/: __init__.py  action.py  env.py  selfplay.py
rl/ppo_lstm/: eval_arena.py  net.py  selfplay.py  train.py
scripts/: eval_matches.py  evaluate_checkpoints.py  mutate_checkpoint.py  overnight_league.py  play_vs_agent.py  quickstart_mac.sh
server/: play_service.py
tests/: conftest.py  test_800_lock.py  test_auction_flow.py  test_bidding_justify.py  test_bot_arena.py  test_hand_engine_integration.py  test_hand_service_view.py  test_meld_sets_trump_now.py  test_musik_take_return.py  test_must_overtake_and_overtrump.py  test_rl_determinism.py  test_rl_env.py  test_scoring_contract_and_rounding.py  test_trump_override_midhand.py
ui/: app_streamlit.py
ui/web/: index.html  package-lock.json  package.json  vite.config.js
ui/web/src/: App.css  App.jsx
